--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 .about-me {
-
   border-radius: 100%;
   border: solid white;
   height: 170px;
@@ -8,14 +7,11 @@
 
 .container-fluid {
   float: left;
-  margin-top: 230px;
+  margin-top: 110px;
 }
 
 .name {
-
-  margin-top: 90px;
   margin-left: 30%;
-
 }
 
 .mimi {
@@ -28,7 +24,6 @@
   font-size: 50px;
  }
 
-
 .bio {
   width: 45%;
   text-align: justify;
@@ -37,18 +32,14 @@
   font-size: 20px;
   color: white;
   background: black;
-  float: right;
-  margin-right: 50px;
-
-}
+ }
 
 nav {
-margin-top: 100px;
-font-size: 30px;
-color: white;
-font-family: 'Mate SC', cursive;
-text-decoration: none;
-
+  margin-top: 100px;
+  font-size: 30px;
+  color: white;
+  font-family: 'Mate SC', cursive;
+  text-decoration: none;
 }
 
  a:link, a:visited {
@@ -61,11 +52,7 @@ a:hover {
   color: grey;
 }
 
-.about {
-  float: left;
-}
-
-.work {
+.portfolio-link {
   padding-top: 50px;
   padding-left: 150px;
 }
@@ -76,79 +63,28 @@ a:hover {
   padding-left: 130px;
 }
 
-/*.photos {
-  float: left;
-}
-*/
 .img-div {
   height: 170px;
   width: 170px;
 }
 
-/*.caption {
-  background: black;
-  color: white;
-  font-size: 15px;
-  margin-bottom: 200px;
-  opacity: .7;
-  font-family: 'Quicksand', sans-serif;
-  position: absolute;
-  top: 20px;
-  left: 20px;
-  padding: 5px;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  visibility: hidden;
+.biography {
+  margin-top: 150px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .img-div:hover .caption {
   visibility: visible;
 }
-*/
-
 
 td {
   position: relative;
 }
 
-/*
-.img {
-  height: 170px;
-  width: 170px;
-  border: solid white;
-}
-
-.first {
-  margin-left: 30px;
-  margin-right: 10px;
-
-}
-
-.last {
-  margin-left: 10px;
-
-}
-
-.second {
-  margin-top: 10px;
-
-}
-
-.third {
-  margin-top: 10px;
-  }
-
-.fourth {
-  margin-top: 10px;
-}*/
-
 .envelope {
   height: 40px;
   width: 40px;
-
 }
 
 .facebook {
@@ -171,7 +107,6 @@ a {
 body {
   background: black;
   margin-bottom: 10px;
-
 }
 
 h1 {
@@ -190,16 +125,38 @@ h1 {
   width: 170px;
 }
 
+.work-container {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 50px;
+}
 
+.work-links {
+  height: 230px;
+  width: 290px;
+}
+
+.work-img {
+  height: 250px;
+  width: 290px;
+}
+
+.portfolio {
+ margin-top: 150px;
+}
+
+#contact {
+  display: flex;
+}
 
 figure {
-
   display: block;
   position: relative;
   float: left;
   overflow: hidden;
   margin: 0 20px 20px 0;
 }
+
 figcaption {
   position: absolute;
   background: black;
@@ -211,11 +168,12 @@ figcaption {
   -moz-transition:    all 0.6s ease;
   -o-transition:      all 0.6s ease;
 }
+
 figure:hover figcaption {
   opacity: 1;
 }
-figure:before {
 
+figure:before {
   position: absolute;
   font-weight: 800;
   background: black;
@@ -233,6 +191,7 @@ figure:before {
   -moz-transition: all 0.6s ease;
   opacity: 0.75;
 }
+
 figure:hover:before {
   opacity: 0;
 }
@@ -241,7 +200,7 @@ figure:hover:before {
 .cap figcaption { bottom: 0; left: -30%; }
 .cap:hover figcaption { left: 0; }
 
-.cap-right:before { bottom: 10px; right: 10px; }
+/*.cap-right:before { bottom: 10px; right: 10px; }
 .cap-right figcaption { bottom: 0; right: -30%; }
 .cap-right:hover figcaption { right: 0; }
 
@@ -252,7 +211,7 @@ figure:hover:before {
 .cap-bot:before { bottom: 10px; left: 10px; }
 .cap-bot figcaption { left: 0; bottom: -30%;}
 .cap-bot:hover figcaption { bottom: 0; }
-
+*/
 
 
 
