--- a/style.css
+++ b/style.css
@@ -78,6 +78,8 @@ Landing Page
 .web-dev {
   font-family: 'Mate SC', cursive;
   font-size: 50px;
+  color: white;
+  text-align: center;
 }
 
  nav {
