--- a/style.css
+++ b/style.css
@@ -214,7 +214,9 @@ Work
   }
 
 .link:hover {
-  background: gray;
+  background: black;
+  color: white;
+  border: 1px solid white;
 }
 
 .tech-list {
