fix media query

--- a/style.css
+++ b/style.css
@@ -347,7 +347,7 @@ Mobile
     margin-top: 30px;
   }
 
-  .mimi_klein {
+  .mimi-klein {
     display: flex;
     justify-content: space-around;
   }
