--- a/style.css
+++ b/style.css
@@ -131,8 +131,8 @@ Landing Page
   width: 45%;
   text-align: justify;
   line-height: 30px;
-  font-family: 'Annie Use Your Telescope', cursive;
-  font-size: 20px;
+  font-family: 'Quicksand', sans-serif;
+  font-size: 18px;
   margin-right: 35px;
  }
 
@@ -262,8 +262,8 @@ figure {
 }
 
 figcaption {
-  font-family: 'Annie Use Your Telescope', cursive;
-  font-size: 18px;
+  font-family: 'Quicksand', sans-serif;
+  font-size: 16px;
   position: absolute;
   background: black;
   background: rgba(0,0,0,0.75);
