--- a/style.css
+++ b/style.css
@@ -45,13 +45,13 @@ a:hover {
 Landing Page
 ===========================*/
 
-.code {
+/*.code {
   height: 600px;
   width: 100%;
   background: url('images/code.jpg');
   position: absolute;
   opacity: .3;
-}
+}*/
 .name-header {
   display: flex;
   justify-content: center;
@@ -63,7 +63,7 @@ Landing Page
   border: 1px solid black;
   height: 170px;
   width: 165px;
-  z-index: 2;
+  /*z-index: 2;*/
 }
 
 .mimi, .klein {
