add aria-labels to link icons for accessibility

--- a/style.css
+++ b/style.css
@@ -304,6 +304,11 @@ Contact
   margin-left: 30px;
 }
 
+/* .contact-link-text {
+  position: absolute;
+  left: 100000000px;
+} */
+
 /*==============================
 Footer
 ==============================*/
